--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&family=Raleway:wght@200&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -6,47 +8,59 @@
 
 body{
     background-image: url('/assets/images/wall-painting.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 a{
     text-decoration: none;
-    color: rgb(172, 172, 172);
+    color: rgb(50, 50, 50);
 }
 
 body{
-    font-family: sans-serif;
-    color: rgb(173, 173, 173);
+    font-family: Raleway, sans-serif;
+    color: rgb(50, 50, 50);
     font-weight: 350;
 }
 
 /* header style */
 
 h1{
-    color: rgb(173, 173, 173);
+    color: rgb(50, 50, 50);
     text-transform: uppercase;
 }
 
 #head{
-    background-color: rgb(0, 0, 100);
-    opacity:0.7;
+    background-color: rgba(255, 255, 255, 0.7);
     height: 90px;
     vertical-align: top;
     
 }
 
 #logo{
-    color: rgb(173, 173, 173);
+    color: rgb(50, 50, 50);
     text-align: center;
     width: 600px;
     position: relative;
     margin: auto;
     border-radius: 15px;
-    top:30%;
+    top: 30%;
+    float: left;
 }
 
-#logo:hover{
+#logo:hover, #navigation:hover{
     background-color: rgb(173, 173, 173);
     color: rgb(0, 0, 100);
+}
+
+#navigation{
+    float: right;
+    margin-left: 10px;
+    font-weight: 400;
+    position: relative;
+    top: 30%;
+    display: inline;
 }
 
 
