--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,11 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    color: rgb(50, 50, 50);
 }
 
 a{
     text-decoration: none;
-    color: rgb(50, 50, 50);
 }
 
 body{
@@ -26,42 +26,51 @@ body{
 
 /* header style */
 
-h1{
+h1, h2{
     color: rgb(50, 50, 50);
     text-transform: uppercase;
+    font-family: Raleway, sans-serif;
+    font-weight: 450;
 }
 
 #head{
-    background-color: rgba(255, 255, 255, 0.7);
-    height: 90px;
+    background-color: rgba(255, 255, 255, 0.6);
+    height: 60px;
     vertical-align: top;
-    
+    margin-bottom: 50px;
 }
 
 #logo{
     color: rgb(50, 50, 50);
-    text-align: center;
     width: 600px;
     position: relative;
-    margin: auto;
     border-radius: 15px;
-    top: 30%;
     float: left;
+    padding: 5px;
 }
 
-#logo:hover, #navigation:hover{
-    background-color: rgb(173, 173, 173);
-    color: rgb(0, 0, 100);
-}
-
-#navigation{
+.nav{
     float: right;
-    margin-left: 10px;
+    padding:5px 10px 5px 10px;
+    margin-top: auto;
     font-weight: 400;
     position: relative;
     top: 30%;
     display: inline;
+    list-style: none;
+    text-align: center;
+    font-size: small;
 }
+
+.nav:hover{
+    background-color: rgba(140, 140, 140, 0.6);
+}
+
+.nav:active{
+    background-color: rgba(140, 140, 140, 0.6);
+}
+
+
 
 
 
