--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&family=Raleway:wght@200&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -16,6 +15,7 @@ body{
 
 a{
     text-decoration: none;
+    color: inherit;
 }
 
 body{
@@ -33,32 +33,27 @@ h1, h2{
     font-weight: 450;
 }
 
-#head{
-    background-color: rgba(255, 255, 255, 0.6);
-    height: 60px;
+#menu{
+    background-color: rgba(255, 255, 255, 0.65);
+    height: 45px;
     vertical-align: top;
     margin-bottom: 50px;
 }
 
 #logo{
     color: rgb(50, 50, 50);
-    width: 600px;
-    position: relative;
-    border-radius: 15px;
     float: left;
-    padding: 5px;
+    text-align: center;
+    margin-left: 5px;
 }
 
 .nav{
     float: right;
-    padding:5px 10px 5px 10px;
-    margin-top: auto;
-    font-weight: 400;
-    position: relative;
-    top: 30%;
+    padding:0 10px 0 10px;
     display: inline;
     list-style: none;
     text-align: center;
+    height: inherit;
     font-size: small;
 }
 
@@ -68,6 +63,20 @@ h1, h2{
 
 .nav:active{
     background-color: rgba(140, 140, 140, 0.6);
+}
+
+/* overview section */
+
+.content{
+    background-color: rgba(255, 255, 255, 0.65);
+    max-width: 1200px;
+    position: relative;
+    margin:0 90px 0 90px;
+    border-radius: 15px;
+    padding: 10px;
+}
+.content h2{
+   text-align: center;
 }
 
 
