--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,11 @@
 }
 
 body{
+    background-attachment: fixed;
+    color: rgb(50, 50, 50);
     background-image: url('/assets/images/wall-painting.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
-    color: rgb(50, 50, 50);
 }
 
 a{
@@ -35,7 +35,7 @@ h1, h2{
 
 #menu{
     background-color: rgba(255, 255, 255, 0.65);
-    height: 45px;
+    height: 60px;
     vertical-align: top;
     margin-bottom: 50px;
 }
@@ -74,12 +74,26 @@ h1, h2{
     margin:0 90px 0 90px;
     border-radius: 15px;
     padding: 10px;
+    overflow: visible;
 }
 .content h2{
    text-align: center;
+   text-decoration-line: underline;
 }
 
+/* code from W3schools */
+.content::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+/* end of code*/
 
 
-
-
+#civilisation{
+    width:300px;
+    height:200px;
+    float:right;
+    border-radius: 15px;
+    margin: 5px;
+}
