--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ h1, h2{
     float: left;
     text-align: center;
     margin-left: 5px;
+    margin-top: 10px;
 }
 
 .nav{
@@ -55,6 +56,8 @@ h1, h2{
     text-align: center;
     height: inherit;
     font-size: small;
+    margin-top: 10px;
+    border-radius: 5px;
 }
 
 .nav:hover{
