added new font to paragraph elements and added styling to socials

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk&family=Raleway&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -24,6 +24,9 @@ body{
     font-weight: 350;
 }
 
+p{
+    font-family: Hanken-Grotesk, sans-serif;
+}
 /* header style */
 
 h1, h2{
@@ -38,6 +41,7 @@ h1, h2{
     height: 60px;
     vertical-align: top;
     margin-bottom: 50px;
+    border-radius: 5px;
 }
 
 #logo{
@@ -68,20 +72,42 @@ h1, h2{
     background-color: rgba(140, 140, 140, 0.6);
 }
 
+/* social meadia links */
+
+#socials{
+    position:fixed;
+    float: left;
+    width: 90px;
+    background-color:rgba(255, 255, 255, 0.65);
+    border-radius: 5px;
+    padding:5px;
+    margin-top: 90px;
+}
+
+#socials h3{
+    text-transform: uppercase;
+}
+
+#social-icons{
+    font-size:200%;
+    margin:5px 0 5px;
+    text-align: center;
+}
+
 /* overview section */
 
 .content{
     background-color: rgba(255, 255, 255, 0.65);
-    max-width: 1200px;
+    max-width: 80vw;
     position: relative;
-    margin:0 90px 0 90px;
-    border-radius: 15px;
+    border-radius: 5px;
     padding: 10px;
     overflow: visible;
+    float: right;
 }
+
 .content h2{
    text-align: center;
-   text-decoration-line: underline;
 }
 
 /* code from W3schools */
@@ -90,13 +116,13 @@ h1, h2{
     clear: both;
     display: table;
   }
-/* end of code*/
+/* end of W3schools code*/
 
 
 #civilisation{
     width:300px;
     height:200px;
     float:right;
-    border-radius: 15px;
+    border-radius: 5px;
     margin: 5px;
 }
