--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ h1, h2{
 #socials{
     position:fixed;
     float: left;
-    width: 90px;
+    width: 120px;
     background-color:rgba(255, 255, 255, 0.65);
     border-radius: 5px;
     padding:5px;
@@ -89,9 +89,9 @@ h1, h2{
 }
 
 #social-icons{
-    font-size:200%;
-    margin:5px 0 5px;
-    text-align: center;
+    font-size:400%;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 /* overview section */
