--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,21 +77,21 @@ h1, h2{
 #socials{
     position:fixed;
     float: left;
-    width: 120px;
     background-color:rgba(255, 255, 255, 0.65);
     border-radius: 5px;
-    padding:5px;
     margin-top: 90px;
+    text-align: center;
+    padding: 5px ;
 }
 
 #socials h3{
     text-transform: uppercase;
 }
 
-#social-icons{
-    font-size:400%;
-    margin-top: 5px;
-    margin-bottom: 5px;
+.social-icons i{
+    font-size: 200%;
+    margin-bottom: 2%;
+    padding: 5%;
 }
 
 /* overview section */
