--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,14 +42,16 @@ h1, h2{
     vertical-align: top;
     margin-bottom: 50px;
     border-radius: 5px;
+    padding: 5px;
 }
 
 #logo{
+    position: relative;
     color: rgb(50, 50, 50);
     float: left;
     text-align: center;
     margin-left: 5px;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 .nav{
@@ -75,7 +77,7 @@ h1, h2{
     float: left;
     background-color:rgba(255, 255, 255, 0.65);
     border-radius: 5px;
-    margin-top: 90px;
+    top: 270px;
     text-align: center;
     padding: 5px ;
 }
@@ -113,9 +115,9 @@ h1, h2{
     float: left;
     background-color:rgba(255, 255, 255, 0.65);
     border-radius: 5px;
-    margin-bottom: 90px;
     text-align: center;
-    padding: 5px ;
+    padding: 8px ;
+    top: 180px;
 }
 
 #top > h3{
@@ -137,16 +139,16 @@ h1, h2{
     padding: 10px;
     overflow: visible;
     float: right;
-    margin: 15px;
+    margin-top: 15px;
 }
 
 .content h2{
    text-align: center;
-   font-size: 200%;
+   font-size: 180%;
 }
 
 .content p{
-    font-size: 110%;
+    font-size: 105%;
 }
 
 /* code from W3schools */
@@ -156,9 +158,10 @@ h1, h2{
     display: table;
   }
 /* end of W3schools code*/
+ 
+/* image styling */
 
-
-#civilisation{
+.img{
     width:300px;
     height:200px;
     float:right;
@@ -166,32 +169,52 @@ h1, h2{
     margin: 5px;
 }
 
-/* stoned ape section */
+/* for screens less than 1100px */
 
-#mushroom{
-    width:300px;
-    height:200px;
-    float:right;
-    border-radius: 5px;
-    margin: 5px;
+@media screen and (max-width: 1100px){
+    #menu{
+        height: 90px;
+        text-align: center;
+    }
+
+    #logo{
+        float: none;
+    }
+    
+    .nav{
+        float: none;
+        display: inline-block;
+    }
 }
 
-/* use of tools section */
+/* for screens less than 850px */
 
-#stone-tool{
-    width:300px;
-    height:200px;
-    float:right;
-    border-radius: 5px;
-    margin: 5px;
+@media screen and (max-width: 850px){
+
+    #logo{
+        font-size: 160%;
+    }
+
+    .nav{
+        font-size: 70%;
+    }
+    
+    .content{
+        margin: 4px;
+    }
+    
+    .content h2{
+        font-size: 170%;
+    }
+    
+    .content p{
+        font-size: 100%;
+    }
+
+    .img{
+        width: 240px;
+        height: 160px;
+    }
 }
 
-/* running man section */
-
-#running-man{
-    width:300px;
-    height:200px;
-    float:right;
-    border-radius: 5px;
-    margin: 5px;
-}
+/* for screens less than 500px */
