--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ h1, h2{
     height:200px;
     float:right;
     border-radius: 5px;
-    margin: 5px;
+    margin:3px;
 }
 
 /* for screens less than 1100px */
@@ -259,3 +259,14 @@ h1, h2{
         font-size: 160%;
     }
 }
+
+/* less than 400px */
+
+@media screen and (max-width: 500px){
+
+    .img{
+        width: 180px;
+        height: 120px;
+    }
+}
+
