--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,7 @@ h1, h2{
     top: 270px;
     text-align: center;
     padding: 5px ;
+    margin-right: 5px;
 }
 
 #socials h3{
@@ -118,6 +119,7 @@ h1, h2{
     text-align: center;
     padding: 8px ;
     top: 180px;
+    margin-right: 5px;
 }
 
 #top > h3{
@@ -267,6 +269,10 @@ h1, h2{
     .img{
         width: 180px;
         height: 120px;
+    }
+
+    .content{
+        margin: 5px 0 5px 5px;
     }
 }
 
